--- a/example/gqlgen.yml
+++ b/example/gqlgen.yml
@@ -35,7 +35,7 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-  - "github.com/yama7321/gqlgen-todos/graph/model"
+  - "example/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
@@ -54,17 +54,3 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
-
-schema:
-- schema.graphql
-exec:
-  filename: generated.go
-model:
-  filename: models_gen.go
-resolver:
-  filename: resolver.go
-  type: Resolver
-# 追加
-models:
-  Todo:
-    model: github.com/[username]/gqlgen-todos.Todo
